# magi-calculator

./: .gitignore  README.md  pyproject.toml  run.sh  sgovplaybook.html  test_parsers.py  test_persistence.html  test_roth_conversion.py  test_tax_calculator.py  validate.py
src/: __init__.py  main.py
src/calculators/: __init__.py  income_aggregator.py  magi_calculator.py  roth_converter.py  tax_calculator.py  tax_rules.py
src/models/: __init__.py  income.py  transaction.py  user_inputs.py
src/parsers/: __init__.py  gains_parser.py  transactions_parser.py
src/web/: routes.py
src/web/static/: persistence.js  style.css
src/web/templates/: base.html  error.html  index.html  report.html
